examples/test/testpolicy15747.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15747
  namespace: namespace58
spec:
  podSelector:
    matchLabels:
      key18: value27
      key9: value32
      key29: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value11
          key40: value5
          key9: value4
      podSelector:
        matchLabels:
          key48: value11
          key1: value34
          key15: value42
